fine-tuned the image search function a bit, added game control buttons (start changes to quit and reset, quit changes back to start, etc.), and prevents user from changing puzzle image (by clicking on a search result) after the game has started; started on actual game code - just beginning to figure out how to split the image into puzzle tiles, make an invisible grid on the game board to snap tiles to, etc.

--- a/css/puzzle.css
+++ b/css/puzzle.css
@@ -1,8 +1,8 @@
 #wrapper {
 	position: relative;
 	font: 100%/100% 'Tahoma' sans-serif;
-	width: 1200px;
-	margin: 0px auto;
+	width: 1400px;
+	margin: 10px auto;
 	text-align: center;
 }
 
@@ -17,13 +17,14 @@
 #image-picker-wrapper {
 	background-color: #ccc;
 	width: 294px;
-	border: solid 2px blue;
+/*	border: solid 2px blue; */
 }
 
 #puzzle-board-wrapper {
 	background-color: #dcb;
-	width: 894px;
-	border: solid 2px red;
+	width: 1094px;
+/*	border: solid 2px red; */
+	overflow: hidden;
 }
 
 #board-canvas {
@@ -33,17 +34,15 @@
 	height: 420px;
 	padding: 0;
 	margin: 4em auto 0 auto;
-	border: 1px solid green;
-	overflow: hidden;
+/*	border: 1px solid green;
+	overflow: hidden; */
 }
 
-.image-selected {
+#image-selected {
 	width: 100%;
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	opacity: 1;
-	filter: alpha(opacity=100);
 }
 
 h1 {
@@ -52,7 +51,7 @@ h1 {
 	color: purple;
 	padding: 1em;
 	margin: 0 auto;
-	border: solid 2px purple;
+/*	border: solid 2px purple; */
 }
 
 h2 {
@@ -60,7 +59,7 @@ h2 {
 	padding: .5em;
 	color: maroon;
 	margin: 0;
-	border: solid 1px black;
+/*	border: solid 1px black; */
 }
 
 #search-error {
@@ -69,12 +68,9 @@ h2 {
 
 .image-result {
 	float:left;
-	background-color: #ccc;
 	width: 145px;
 	height: 145px;
 	margin: 1px;
-	opacity: 1;
-	filter: alpha(opacity=100);
 }
 
 #image-search-pages {
@@ -95,6 +91,8 @@ h2 {
 	color: blue;
 	font-weight: bold;
 }
+
+
 
 /*-------------------------------------------------------------------------------------------------
 Buttons
@@ -143,7 +141,7 @@ input[type=button]:active {
 }
 
 
-#start-button {
+#start-button, #quit-button, #reset-button {
 	float: bottom;
 	margin: 1em;
 }
